--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
     <button onclick="adjustTime(-20)">-20 sec</button>
 </div>
 
+<div id="toggleTimers" style="display: none;">
+    <button onclick="toggleTimerVisibility(1)">Toon/Verberg Timer 1</button>
+    <button onclick="toggleTimerVisibility(2)">Toon/Verberg Timer 2</button>
+    <button onclick="toggleTimerVisibility(3)">Toon/Verberg Timer 3</button>
+    <button onclick="toggleTimerVisibility(4)">Toon/Verberg Timer 4</button>
+</div>
+
+
     <script>
        
 document.addEventListener("DOMContentLoaded", function() {
@@ -248,12 +256,19 @@ document.addEventListener("DOMContentLoaded", function() {
     });
 
     // ✅ Controleer of de URL '?view=display' bevat en verberg de knoppen indien nodig
-   function hideControlsIfNeeded() {
+function hideControlsIfNeeded() {
     const urlParams = new URLSearchParams(window.location.search);
     const isDisplayMode = urlParams.get("view") === "display";
 
     if (isDisplayMode) {
-        document.getElementById("controls").style.display = "none";
+    document.getElementById("controls").style.display = "none";
+
+    const toggleTimers = document.getElementById("toggleTimers");
+    if (toggleTimers) {
+        toggleTimers.style.display = "block"; // Knoppen tonen
+        console.log("Toggle knoppen zichtbaar gemaakt."); // ✅ Debugging
+    }
+}
 
         // Maak timers en teamnamen niet klikbaar en verberg invoervelden
         for (let i = 1; i <= 4; i++) {
@@ -264,7 +279,6 @@ document.addEventListener("DOMContentLoaded", function() {
             if (timerBox) {
                 timerBox.style.pointerEvents = "none"; // Voorkomt klikken/selecteren
                 timerBox.style.cursor = "default"; // Verandert de muisaanwijzer
-                // **Laat de rode rand van de geselecteerde timer staan**
             }
 
             if (teamNameDisplay) {
@@ -285,6 +299,20 @@ document.addEventListener("DOMContentLoaded", function() {
 }
 
 
+ function toggleTimerVisibility(timerNumber) {
+        const timerElement = document.getElementById(`timer${timerNumber}`);
+        
+        if (timerElement) {
+            if (timerElement.style.display === "none") {
+                timerElement.style.display = "block"; // Toon timer
+            } else {
+                timerElement.style.display = "none"; // Verberg timer
+            }
+        }
+    }
+
+    // Zorg dat de functie toegankelijk is in de HTML-knoppen
+    window.toggleTimerVisibility = toggleTimerVisibility;
 
 
     // ✅ Roep de functie aan zodra de pagina geladen is
