--- a/index.html
+++ b/index.html
@@ -123,6 +123,20 @@
     <button onclick="toggleTimerVisibility(3)">Toon/Verberg Timer 3</button>
     <button onclick="toggleTimerVisibility(4)">Toon/Verberg Timer 4</button>
 </div>
+<div id="setTimer" style="display: none;">
+    <label for="timerSelect">Kies een timer:</label>
+    <select id="timerSelect">
+        <option value="1">Timer 1</option>
+        <option value="2">Timer 2</option>
+        <option value="3">Timer 3</option>
+        <option value="4">Timer 4</option>
+    </select>
+
+    <label for="secondsInput">Aantal seconden:</label>
+    <input type="number" id="secondsInput" placeholder="Voer seconden in" />
+
+    <button id="setTimerButton">Stel timer in</button>
+</div>
 
     <script>
        
@@ -271,10 +285,17 @@ function toggleTimerVisibility(timerNumber) {
     const urlParams = new URLSearchParams(window.location.search);
     const isDisplayMode = urlParams.get("view") === "display";
 
+    const controls = document.getElementById("controls");
+    const toggleTimers = document.getElementById("toggleTimers");
+    const setTimerDiv = document.getElementById("setTimer");
+
     if (isDisplayMode) {
-        document.getElementById("controls").style.display = "none"; // Verberg de bedieningsknoppen
-	document.getElementById("toggleTimers").style.display = "none"; // Verberg knoppen in de display-modus
-	
+        console.log("Display mode actief - knoppen verbergen...");
+
+        // Verberg alle extra knoppen en functies
+        if (controls) controls.style.display = "none";
+        if (toggleTimers) toggleTimers.style.display = "none";
+        if (setTimerDiv) setTimerDiv.style.display = "none";
 
         // Maak timers en teamnamen niet klikbaar en verberg invoervelden
         for (let i = 1; i <= 4; i++) {
@@ -283,30 +304,33 @@ function toggleTimerVisibility(timerNumber) {
             const teamNameInput = document.getElementById(`team${i}`);
 
             if (timerBox) {
-                timerBox.style.pointerEvents = "none"; // Voorkomt klikken/selecteren
-                timerBox.style.cursor = "default"; // Verandert de muisaanwijzer
-                // **Laat de rode rand van de geselecteerde timer staan**
+                timerBox.style.pointerEvents = "none";
+                timerBox.style.cursor = "default";
             }
 
             if (teamNameDisplay) {
-                teamNameDisplay.style.pointerEvents = "none"; // Voorkomt klikken
-                teamNameDisplay.style.cursor = "default"; // Verandert de muisaanwijzer
+                teamNameDisplay.style.pointerEvents = "none";
+                teamNameDisplay.style.cursor = "default";
             }
 
             if (teamNameInput) {
-                teamNameInput.style.display = "none"; // Verbergt inputveld
+                teamNameInput.style.display = "none";
             }
         }
 
-        // Voorkom dat de geselecteerde timer wijzigt in display modus
+        // Voorkom dat timers nog geselecteerd kunnen worden
         window.selectTimer = function() {
             console.log("Selecteren van timers is uitgeschakeld in weergavemodus.");
         };
-     } else {
-        // In de normale modus, toon de knoppen voor het tonen/verbergen van timers
-        document.getElementById("toggleTimers").style.display = "block"; // Toon knoppen in normale modus
+    } else {
+        console.log("Normale modus - extra knoppen tonen...");
+        
+        // Zorg ervoor dat beide knoppen sets zichtbaar zijn in de normale modus
+        if (toggleTimers) toggleTimers.style.display = "block";
+        if (setTimerDiv) setTimerDiv.style.display = "block";
     }
 }
+
 
 // ✅ Roep de functie aan zodra de pagina geladen is
 document.addEventListener("DOMContentLoaded", function() {
